<resources>
    <string name="app_name">Currency Converter Application</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="from">From</string>
    <string name="afn">AFN</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted amount</string>
    <string name="change">SWITCH</string>
</resources>