<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/convergence"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/currency_converter"
            android:textColor="@color/main_blue" />

        <TextView
            android:id="@+id/txtFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/convergence"
            android:textSize="20sp"
            android:text="@string/from"/>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spnFirstCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/convergence"
            android:text="@string/afn"
            android:textColor="#757575"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/convergence"
            android:textSize="20sp"
            android:text="@string/to"/>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spnSecondCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/convergence"
            android:text="@string/afn"
            android:textColor="#757575"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/txtFirstCurrencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etFirstCurrency"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ellipsize="start"
            android:hint="@string/amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            android:fontFamily="@font/convergence"
            android:background="@drawable/edit_text_input_with_border"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_main_round"
            android:fontFamily="@font/convergence"
            android:text="@string/convert"
            android:textAllCaps="false"
            android:textColor="#455A64"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

        <ProgressBar
            android:id="@+id/prgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lytResult"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:textSize="20sp"
                android:text="@string/result"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSecondCurrencyName"
                android:fontFamily="@font/convergence"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etSecondCurrency"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:hint="@string/converted_amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/convergence"
            android:textSize="15sp"
            android:background="@drawable/edit_text_input_with_border"
            tools:ignore="VisualLintTextFieldSize" />

    </LinearLayout>
</ScrollView>